# homeideasai

./: .gitignore  Makefile  docker-compose.yml
backend/: API_CONCURRENCY_FIXES.md  Dockerfile  pyproject.toml  start.sh  start_production.sh
backend/alembic/versions/: 1c0fa04e6aac_added_stripe_info.py  278f10f6217e_add_created_at.py  2c4173865258_migration_name.py  343856bb7819_add_field.py  4d204fa6fe53_add_oauth.py  68eede79aa0c_initial_homeideasai_setup.py  78678adcd3ab_add_improved_prompt.py  83e68c690200_add_sub_stuff.py  aea58becee37_add_virtual_try_on.py  d6b7cfb8c04e_add_types.py  e6116a4dc078_add_sub_stuff.py  ffd51c20ef34_add_generations.py
backend/app/: config.py  database.py  email.py  main.py  models.py  schemas.py  users.py
backend/app/email_templates/: password_reset.html  verify_email.html
backend/app/routes/: billing.py  home_design_chat.py  home_design_projects.py  lead_generation.py  waitlist.py
backend/commands/: generate_openapi_schema.py
backend/tests/: conftest.py
backend/tests/main/: test_main.py
frontend/: README.md  next.config.ts  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml  sanity.config.ts  start.sh  watcher.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  manifest.ts  sitemap.ts
frontend/src/components/: LoginForm.tsx  PasswordRecoveryForm.tsx  PortableTextContent.tsx  RegisterForm.tsx  auth-context.tsx  before-after-showcase.tsx  blog-posts.tsx  crisp.js  description-examples.tsx  design-card.tsx  email-verification-handler.tsx  facebook-pixel.tsx  features.tsx  footer.tsx  (+23 more)
(+77 files in other folders)
